tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@math_on_in_result.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/math_on_in_result.txt
---
error: Math operations can only be done on numbers, found `bool`
 --> math_on_in_result.txt:1:5
  |
1 | {{ (1 in [1]) * 2 }}
  |     ^^^^^^^^
